Fixed houses filtering and houses view alignment

--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -104,3 +104,7 @@ and open the template in the editor.
 .ui-datepicker-trigger {
     display: inline-block;
 }
+
+.alignTop {
+    vertical-align: top;
+}
